# local_assistent

./: .gitignore  commands.py  config.py  db.py  logger.py  main.py  note_creater.py  notes_tests.py  page_loader.py  playsound-1.3.0-py3-none-any.whl  pyproject.toml  schemas.py  screen_parser.py  screen_parser_tests.py  tests.py  voice_buffer_parser.py
