[tool.poetry]
name = "local-assistent"
version = "0.1.0"
description = ""
authors = ["Ivan Belokrylov <ivan.belokrylov@gmail.com>"]
readme = "README.md"
packages = [{include = "local_assistent"}]

[tool.poetry.dependencies]
python = "^3.11"
certifi = "==2023.7.22"
cffi = "==1.16.0"
charset-normalizer = "==3.3.2"
idna = "==3.4"
iniconfig = "==2.0.0"
loguru = "==0.7.2"
packaging = "==23.2"
playsound = "==1.3.0"
pluggy = "==1.3.0"
pycparser = "==2.21"
pytest = "==7.4.3"
requests = "==2.31.0"
sounddevice = "==0.4.6"
srt = "==3.5.3"
tqdm = "==4.66.1"
urllib3 = "==2.1.0"
vosk = "==0.3.45"
websockets = "==12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
